feat: implemented notes endpoints in backend
